Regenerate failing tests for PR #4